--- a/Instruction.ipynb
+++ b/Instruction.ipynb
@@ -36,9 +36,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing 011409565.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 032610514.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 058358044.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 1.jpg\n",
+      "Performing prediction on 4 number of slices.\n",
+      "10 bboxes found in 1.jpg\n",
+      "Processing 12572286c.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 14013864b.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 18609713e.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 1_2.jpg\n",
+      "Performing prediction on 4 number of slices.\n",
+      "9 bboxes found in 1_2.jpg\n",
+      "Processing 1_3.jpg\n",
+      "Performing prediction on 4 number of slices.\n",
+      "8 bboxes found in 1_3.jpg\n",
+      "Processing 2.jpg\n",
+      "Performing prediction on 12 number of slices.\n",
+      "10 bboxes found in 2.jpg\n",
+      "Processing 26095039a.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 26823809a.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in 26823809a.jpg\n",
+      "Processing 2d1b074cb.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "4 bboxes found in 2d1b074cb.jpg\n",
+      "Processing 2_1.jpg\n",
+      "Performing prediction on 9 number of slices.\n",
+      "11 bboxes found in 2_1.jpg\n",
+      "Processing 2_2.jpg\n",
+      "Performing prediction on 9 number of slices.\n",
+      "11 bboxes found in 2_2.jpg\n",
+      "Processing 38168248b.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in 38168248b.jpg\n",
+      "Processing 38988163c.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in 38988163c.jpg\n",
+      "Processing 5.jpg\n",
+      "Performing prediction on 2 number of slices.\n",
+      "11 bboxes found in 5.jpg\n",
+      "Processing 55236555e.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 6.png\n",
+      "Performing prediction on 6 number of slices.\n",
+      "5 bboxes found in 6.png\n",
+      "Processing 7242578f3.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in 7242578f3.jpg\n",
+      "Processing 7272882ed.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 7937980e1.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in 7937980e1.jpg\n",
+      "Processing 8166432c8.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 8316753c8.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "2 bboxes found in 8316753c8.jpg\n",
+      "Processing 8591865ee.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing 91297604d.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b10854744.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b1169302a.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b1169302a.jpg\n",
+      "Processing b172ed972.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b1871209d.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "2 bboxes found in b1871209d.jpg\n",
+      "Processing b1bb86b1b.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b1c675f70.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b1c675f70.jpg\n",
+      "Processing b298cfd77.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b298cfd77.jpg\n",
+      "Processing b2cca1dd3.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b2cca1dd3.jpg\n",
+      "Processing b2eb59683.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "5 bboxes found in b2eb59683.jpg\n",
+      "Processing b36ad6b4d.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b36ad6b4d.jpg\n",
+      "Processing b399eb51e.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b399eb51e.jpg\n",
+      "Processing b3e786c01.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b3f7b5124.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "3 bboxes found in b3f7b5124.jpg\n",
+      "Processing b4b3caa34.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b4b3caa34.jpg\n",
+      "Processing b4e599398.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b4e599398.jpg\n",
+      "Processing b6c0a7d84.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b6c0a7d84.jpg\n",
+      "Processing b7318c374.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b7318c374.jpg\n",
+      "Processing b7f57d9e8.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b7f69ade4.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b7f69ade4.jpg\n",
+      "Processing b854d6051.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b879be66a.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b94f7a644.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in b94f7a644.jpg\n",
+      "Processing b95d6dd9c.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b99aac0ce.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "2 bboxes found in b99aac0ce.jpg\n",
+      "Processing b9b9bdc26.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing b9c417685.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing bb31234d9.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing bb976cabb.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in bb976cabb.jpg\n",
+      "Processing bba0d8ed5.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing d40740a01.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in d40740a01.jpg\n",
+      "Processing d4837d743.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in d4837d743.jpg\n",
+      "Processing da3c51637.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in da3c51637.jpg\n",
+      "Processing da3ee2f80.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in da3ee2f80.jpg\n",
+      "Processing dad047800.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in dad047800.jpg\n",
+      "Processing db8c4b728.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in db8c4b728.jpg\n",
+      "Processing dbbe8bc63.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing dc007abd3.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in dc007abd3.jpg\n",
+      "Processing dc0f2e22b.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "Processing dd4ffcb5c.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "3 bboxes found in dd4ffcb5c.jpg\n",
+      "Processing df648f2f4.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in df648f2f4.jpg\n",
+      "Processing dfdfc012a.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in dfdfc012a.jpg\n",
+      "Processing dfe1d30a7.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in dfe1d30a7.jpg\n",
+      "Processing dff7a31fc.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in dff7a31fc.jpg\n",
+      "Processing e0b6f0185.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "5 bboxes found in e0b6f0185.jpg\n",
+      "Processing e3adcb329.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in e3adcb329.jpg\n",
+      "Processing e3da55562.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in e3da55562.jpg\n",
+      "Processing e7dfaf709.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in e7dfaf709.jpg\n",
+      "Processing e7e24507a.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "5 bboxes found in e7e24507a.jpg\n",
+      "Processing e7e2c2aa6.jpg\n",
+      "Performing prediction on 1 number of slices.\n",
+      "1 bboxes found in e7e2c2aa6.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "from inference_modular import ship_detection\n",
     "\n",
