--- a/debug-sentinel_api.ipynb
+++ b/debug-sentinel_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "54a825ad-1ed1-4079-9162-90a9c4cf4eb8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "99e6d1e1",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2f0fbb82",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cc015a2a",
    "metadata": {},
    "outputs": [],
@@ -170,64 +170,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0f732b1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from tools import bbox_geometry_calculator, bbox_divide\n",
+    "import cv2\n",
+    "\n",
     "def sentinel_get_area(bbox_coords, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, mosaicking_order = 'mostRecent', maxcc=0.8,\n",
-    "                      resolution=10, img_size=None, save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\"):\n",
-    "    # w, h, area = bbox_geometry_calculator(bbox_coords)\n",
+    "                      resolution=5, img_size=(2500,2500), save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\"):\n",
+    "    w, h, area = bbox_geometry_calculator(bbox_coords)\n",
+    "    print(f\"w: {w:,.0f}, h: {h:,.0f}, area: {area:,.0f}\")\n",
     "    bboxes = bbox_divide(bbox_coords)\n",
     "    images = []\n",
-    "    for bbox in bboxes:\n",
-    "        img = get_sentinel_image(bbox, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, maxcc=0.8, mosaicking_order = 'mostRecent', resolution=5, img_size=(2500,2500),)\n",
-    "        images.append(img)\n",
+    "    for bbox_row in bboxes:\n",
+    "        images_row = []\n",
+    "        for bbox in bbox_row:\n",
+    "            print(bbox)\n",
+    "            img = get_sentinel_image(bbox, timeline, config, data_collection=data_collection, maxcc=maxcc, mosaicking_order = mosaicking_order,\n",
+    "                                     resolution=resolution, img_size=img_size,)\n",
+    "            images_row.append(img)\n",
+    "        images_row.append(images)\n",
     "        \n",
+    "    images_horizontally = []\n",
+    "    for images_row in images:\n",
+    "        im_v = cv2.vconcat(images_row)\n",
+    "        images_horizontally.append(im_v)\n",
     "        \n",
+    "    final_image = cv2.hconcat(images_horizontally) \n",
     "                \n",
-    "    if save_images:\n",
-    "        if not os.path.exists(data_folder):\n",
-    "            os.makedirs(data_folder)\n",
-    "    if subfolder_name == \"default\": \n",
-    "        subfolder_name = f\"{timeline[0]}_to_{timeline[1]-{bbox}-{mosaicking_order}-{data_collection.catalog_id}}\"\n",
-    "    output_path = os.path.join(subfolder_name, data_folder)\n",
-    "    if not os.path.exists(output_path):\n",
-    "        os.makedirs(output_path)\n",
-    "    \n",
+    "    # if save_images:\n",
+    "    #     if not os.path.exists(data_folder):\n",
+    "    #         os.makedirs(data_folder)\n",
+    "    # if subfolder_name == \"default\": \n",
+    "    #     subfolder_name = f\"{timeline[0]}_to_{timeline[1]-{bbox}-{mosaicking_order}-{data_collection.catalog_id}}\"\n",
+    "    # output_path = os.path.join(subfolder_name, data_folder)\n",
+    "    # if not os.path.exists(output_path):\n",
+    "    #     os.makedirs(output_path)\n",
+    "    return final_image\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "e6c8b002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w: 30,568, h: 33,358, area: 1,019,717,312\n",
+      "[58.5, 23.6, 58.55, 23.65]\n",
+      "Requesting images with 10m resolution and region size of (504, 559) pixels\n",
+      "[58.55, 23.6, 58.6, 23.65]\n",
+      "Requesting images with 10m resolution and region size of (504, 559) pixels\n",
+      "[58.65, 23.6, 58.7, 23.65]\n",
+      "Requesting images with 10m resolution and region size of (504, 560) pixels\n",
+      "[58.8, 23.6, 58.85, 23.65]\n",
+      "Requesting images with 10m resolution and region size of (503, 560) pixels\n",
+      "[59.0, 23.6, 59.05, 23.65]\n",
+      "Requesting images with 10m resolution and region size of (502, 561) pixels\n",
+      "[59.0, 23.65, 59.05, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (502, 561) pixels\n",
+      "[59.05, 23.65, 59.1, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (502, 561) pixels\n",
+      "[59.15, 23.65, 59.2, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (502, 562) pixels\n",
+      "[59.3, 23.65, 59.35, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (501, 562) pixels\n",
+      "[59.5, 23.65, 59.55, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (500, 563) pixels\n",
+      "[59.5, 23.75, 59.55, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (500, 563) pixels\n",
+      "[59.55, 23.75, 59.6, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (500, 563) pixels\n",
+      "[59.65, 23.75, 59.7, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (499, 564) pixels\n",
+      "[59.8, 23.75, 59.85, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (499, 564) pixels\n",
+      "[60.0, 23.75, 60.05, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (522, 543) pixels\n",
+      "[60.0, 23.9, 60.05, 23.95]\n",
+      "Requesting images with 10m resolution and region size of (521, 543) pixels\n",
+      "[60.05, 23.9, 60.1, 23.95]\n",
+      "Requesting images with 10m resolution and region size of (521, 543) pixels\n",
+      "[60.15, 23.9, 60.2, 23.95]\n",
+      "Requesting images with 10m resolution and region size of (520, 544) pixels\n",
+      "[60.3, 23.9, 60.35, 23.95]\n",
+      "Requesting images with 10m resolution and region size of (520, 544) pixels\n",
+      "[60.5, 23.9, 60.55, 23.95]\n",
+      "Requesting images with 10m resolution and region size of (519, 545) pixels\n",
+      "[60.5, 24.1, 60.55, 24.15]\n",
+      "Requesting images with 10m resolution and region size of (518, 545) pixels\n",
+      "[60.55, 24.1, 60.6, 24.15]\n",
+      "Requesting images with 10m resolution and region size of (518, 545) pixels\n",
+      "[60.65, 24.1, 60.7, 24.15]\n",
+      "Requesting images with 10m resolution and region size of (518, 545) pixels\n",
+      "[60.8, 24.1, 60.85, 24.15]\n",
+      "Requesting images with 10m resolution and region size of (517, 546) pixels\n",
+      "[61.0, 24.1, 61.05, 24.15]\n",
+      "Requesting images with 10m resolution and region size of (516, 547) pixels\n"
+     ]
+    }
+   ],
+   "source": [
+    "bbox_coords = [58.5, 23.6, 58.8, 23.9]\n",
+    "timeline = ('2023-07-05', '2023-09-25')\n",
+    "\n",
+    "# Parameters\n",
+    "mosaicking_order_modes = ['mostRecent', 'leastCC', 'leastRecent']\n",
+    "data_collection_modes = [DataCollection.SENTINEL2_L2A, DataCollection.SENTINEL2_L1C]\n",
+    "\n",
+    "res = sentinel_get_area(bbox_coords, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, mosaicking_order = 'mostRecent', maxcc=0.8,\n",
+    "                      resolution=10, save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "23e64ce4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "10 + 2*0.05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1a514c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bbox = [10, 15, 10.5, 15.6]\n",
-    "res = bbox_divide(bbox)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d95f5629",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(res)"
+    "print(res)"
    ]
   },
   {
