--- a/debug-sentinel_api.ipynb
+++ b/debug-sentinel_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "54a825ad-1ed1-4079-9162-90a9c4cf4eb8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "99e6d1e1",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2f0fbb82",
    "metadata": {},
    "outputs": [],
@@ -83,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "cc015a2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_sentinel_image(bbox, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, maxcc=0.8, mosaicking_order = 'mostRecent', resolution=10,\n",
-    "                       img_size=None,\n",
+    "                       img_size=None, return_numpy=False\n",
     "                    #    save_images=False, data_folder=\"sentinel-hub\"\n",
     "                       ):\n",
     "    evalscript_true_color = \"\"\"\n",
@@ -141,8 +141,9 @@
     "\n",
     "    # By construction, only one image at time is returned.\n",
     "    true_color_imgs = request_true_color.get_data(save_data=False)\n",
-    "    image = Image.fromarray(true_color_imgs[0].astype('uint8')).convert('RGB')\n",
-    "    \n",
+    "    if return_numpy:\n",
+    "        return true_color_imgs[0]\n",
+    "    image = Image.fromarray(true_color_imgs[0].astype('uint8')).convert('RGB') \n",
     "    return image"
    ]
   },
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "0f732b1e",
    "metadata": {},
    "outputs": [],
@@ -179,7 +180,7 @@
     "import cv2\n",
     "\n",
     "def sentinel_get_area(bbox_coords, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, mosaicking_order = 'mostRecent', maxcc=0.8,\n",
-    "                      resolution=5, img_size=(2500,2500), save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\"):\n",
+    "                      resolution=5, img_size=(2500,2500), save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\",):\n",
     "    w, h, area = bbox_geometry_calculator(bbox_coords)\n",
     "    print(f\"w: {w:,.0f}, h: {h:,.0f}, area: {area:,.0f}\")\n",
     "    bboxes = bbox_divide(bbox_coords)\n",
@@ -189,16 +190,16 @@
     "        for bbox in bbox_row:\n",
     "            print(bbox)\n",
     "            img = get_sentinel_image(bbox, timeline, config, data_collection=data_collection, maxcc=maxcc, mosaicking_order = mosaicking_order,\n",
-    "                                     resolution=resolution, img_size=img_size,)\n",
+    "                                     resolution=resolution, img_size=img_size, return_numpy=True)\n",
     "            images_row.append(img)\n",
-    "        images_row.append(images)\n",
+    "        images.append(images_row)\n",
     "        \n",
-    "    images_horizontally = []\n",
-    "    for images_row in images:\n",
-    "        im_v = cv2.vconcat(images_row)\n",
-    "        images_horizontally.append(im_v)\n",
+    "    # images_horizontally = []\n",
+    "    # for images_row in images:\n",
+    "    #     im_v = cv2.vconcat(images_row)\n",
+    "    #     images_horizontally.append(im_v)\n",
     "        \n",
-    "    final_image = cv2.hconcat(images_horizontally) \n",
+    "    # final_image = cv2.hconcat(images_horizontally) \n",
     "                \n",
     "    # if save_images:\n",
     "    #     if not os.path.exists(data_folder):\n",
@@ -208,13 +209,13 @@
     "    # output_path = os.path.join(subfolder_name, data_folder)\n",
     "    # if not os.path.exists(output_path):\n",
     "    #     os.makedirs(output_path)\n",
-    "    return final_image\n",
+    "    return images#, final_image\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "e6c8b002",
    "metadata": {},
    "outputs": [
@@ -222,62 +223,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w: 30,568, h: 33,358, area: 1,019,717,312\n",
+      "w: 20,379, h: 22,239, area: 453,207,740\n",
       "[58.5, 23.6, 58.55, 23.65]\n",
-      "Requesting images with 10m resolution and region size of (504, 559) pixels\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
       "[58.55, 23.6, 58.6, 23.65]\n",
-      "Requesting images with 10m resolution and region size of (504, 559) pixels\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
       "[58.65, 23.6, 58.7, 23.65]\n",
-      "Requesting images with 10m resolution and region size of (504, 560) pixels\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
       "[58.8, 23.6, 58.85, 23.65]\n",
-      "Requesting images with 10m resolution and region size of (503, 560) pixels\n",
-      "[59.0, 23.6, 59.05, 23.65]\n",
-      "Requesting images with 10m resolution and region size of (502, 561) pixels\n",
-      "[59.0, 23.65, 59.05, 23.7]\n",
-      "Requesting images with 10m resolution and region size of (502, 561) pixels\n",
-      "[59.05, 23.65, 59.1, 23.7]\n",
-      "Requesting images with 10m resolution and region size of (502, 561) pixels\n",
-      "[59.15, 23.65, 59.2, 23.7]\n",
-      "Requesting images with 10m resolution and region size of (502, 562) pixels\n",
-      "[59.3, 23.65, 59.35, 23.7]\n",
-      "Requesting images with 10m resolution and region size of (501, 562) pixels\n",
-      "[59.5, 23.65, 59.55, 23.7]\n",
-      "Requesting images with 10m resolution and region size of (500, 563) pixels\n",
-      "[59.5, 23.75, 59.55, 23.8]\n",
-      "Requesting images with 10m resolution and region size of (500, 563) pixels\n",
-      "[59.55, 23.75, 59.6, 23.8]\n",
-      "Requesting images with 10m resolution and region size of (500, 563) pixels\n",
-      "[59.65, 23.75, 59.7, 23.8]\n",
-      "Requesting images with 10m resolution and region size of (499, 564) pixels\n",
-      "[59.8, 23.75, 59.85, 23.8]\n",
-      "Requesting images with 10m resolution and region size of (499, 564) pixels\n",
-      "[60.0, 23.75, 60.05, 23.8]\n",
-      "Requesting images with 10m resolution and region size of (522, 543) pixels\n",
-      "[60.0, 23.9, 60.05, 23.95]\n",
-      "Requesting images with 10m resolution and region size of (521, 543) pixels\n",
-      "[60.05, 23.9, 60.1, 23.95]\n",
-      "Requesting images with 10m resolution and region size of (521, 543) pixels\n",
-      "[60.15, 23.9, 60.2, 23.95]\n",
-      "Requesting images with 10m resolution and region size of (520, 544) pixels\n",
-      "[60.3, 23.9, 60.35, 23.95]\n",
-      "Requesting images with 10m resolution and region size of (520, 544) pixels\n",
-      "[60.5, 23.9, 60.55, 23.95]\n",
-      "Requesting images with 10m resolution and region size of (519, 545) pixels\n",
-      "[60.5, 24.1, 60.55, 24.15]\n",
-      "Requesting images with 10m resolution and region size of (518, 545) pixels\n",
-      "[60.55, 24.1, 60.6, 24.15]\n",
-      "Requesting images with 10m resolution and region size of (518, 545) pixels\n",
-      "[60.65, 24.1, 60.7, 24.15]\n",
-      "Requesting images with 10m resolution and region size of (518, 545) pixels\n",
-      "[60.8, 24.1, 60.85, 24.15]\n",
-      "Requesting images with 10m resolution and region size of (517, 546) pixels\n",
-      "[61.0, 24.1, 61.05, 24.15]\n",
-      "Requesting images with 10m resolution and region size of (516, 547) pixels\n"
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[58.8, 23.65, 58.85, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[58.85, 23.65, 58.9, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[58.95, 23.65, 59.0, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[59.1, 23.65, 59.15, 23.7]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[59.1, 23.75, 59.15, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[59.15, 23.75, 59.2, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[59.25, 23.75, 59.3, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n",
+      "[59.4, 23.75, 59.45, 23.8]\n",
+      "Requesting images with 10m resolution and region size of (2500, 2500) pixels\n"
      ]
     }
    ],
    "source": [
-    "bbox_coords = [58.5, 23.6, 58.8, 23.9]\n",
+    "bbox_coords = [58.5, 23.6, 58.7, 23.8]\n",
     "timeline = ('2023-07-05', '2023-09-25')\n",
     "\n",
     "# Parameters\n",
@@ -290,7 +265,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
+   "id": "513f087d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[<PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>],\n",
+       " [<PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>],\n",
+       " [<PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>,\n",
+       "  <PIL.Image.Image image mode=RGB size=2500x2500>]]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fd13a256",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.8.0) :-1: error: (-5:Bad argument) in function 'vconcat'\n> Overload resolution failed:\n>  - Can't parse 'src'. Sequence item with index 0 has a wrong type\n>  - Can't parse 'src'. Sequence item with index 0 has a wrong type\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32md:\\NLP 1\\Sat_object_detection\\debug-sentinel_api.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug-sentinel_api.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m images_horizontally \u001b[39m=\u001b[39m []\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug-sentinel_api.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m images_row \u001b[39min\u001b[39;00m res:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug-sentinel_api.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     im_v \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mvconcat(images_row)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug-sentinel_api.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     images_horizontally\u001b[39m.\u001b[39mappend(im_v)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/NLP%201/Sat_object_detection/debug-sentinel_api.ipynb#X34sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# final_image = cv2.hconcat(images_horizontally)\u001b[39;00m\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.0) :-1: error: (-5:Bad argument) in function 'vconcat'\n> Overload resolution failed:\n>  - Can't parse 'src'. Sequence item with index 0 has a wrong type\n>  - Can't parse 'src'. Sequence item with index 0 has a wrong type\n"
+     ]
+    }
+   ],
+   "source": [
+    "images_horizontally = []\n",
+    "for images_row in res:\n",
+    "    im_v = cv2.vconcat(images_row)\n",
+    "    images_horizontally.append(im_v)\n",
+    "    \n",
+    "# final_image = cv2.hconcat(images_horizontally)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d979c6ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[58.5, 23.6, 58.55, 23.65],\n",
+       "  [58.55, 23.6, 58.6, 23.65],\n",
+       "  [58.6, 23.6, 58.65, 23.65],\n",
+       "  [58.65, 23.6, 58.7, 23.65]],\n",
+       " [[58.5, 23.65, 58.55, 23.7],\n",
+       "  [58.55, 23.65, 58.6, 23.7],\n",
+       "  [58.6, 23.65, 58.65, 23.7],\n",
+       "  [58.65, 23.65, 58.7, 23.7]],\n",
+       " [[58.5, 23.7, 58.55, 23.75],\n",
+       "  [58.55, 23.7, 58.6, 23.75],\n",
+       "  [58.6, 23.7, 58.65, 23.75],\n",
+       "  [58.65, 23.7, 58.7, 23.75]]]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bbox = [58.5, 23.6, 58.7, 23.8]\n",
+    "lon_step=0.05\n",
+    "lat_step=0.05\n",
+    "\n",
+    "m = str(lon_step)[::-1].find('.')\n",
+    "lon1_ref, lat1_ref, lon2_ref, lat2_ref = bbox\n",
+    "h_bbox = lat2_ref - lat1_ref\n",
+    "w_bbox = lon2_ref - lon1_ref\n",
+    "lon_no_steps = int(w_bbox//lon_step)\n",
+    "lat_no_steps = int(h_bbox//lat_step)\n",
+    "bboxes = []\n",
+    "for h_partition in range(lat_no_steps):\n",
+    "    lat1 = lat1_ref + h_partition * lat_step\n",
+    "    lat1 = round(lat1, m)\n",
+    "    lat2 = lat1 + lat_step\n",
+    "    lat2 = round(lat2, m)\n",
+    "    bboxes_row = []\n",
+    "    for w_partition in range(lon_no_steps):\n",
+    "        lon1 = lon1_ref + w_partition * lon_step\n",
+    "        lon1 = round(lon1, m)\n",
+    "        lon2 = lon1 + lon_step\n",
+    "        lon2 = round(lon2, m)\n",
+    "        bboxes_row.append([lon1, lat1, lon2, lat2])\n",
+    "    bboxes.append(bboxes_row)\n",
+    "bboxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "23e64ce4",
    "metadata": {},
    "outputs": [
@@ -298,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "([], None)\n"
      ]
     }
    ],
