--- a/debug-sentinel_api.ipynb
+++ b/debug-sentinel_api.ipynb
@@ -88,10 +88,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sentinel_image(bbox, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, maxcc=0.8, mosaicking_order = 'mostRecent', resolution=10,\n",
-    "                       img_size=None, return_numpy=False, verbose=False\n",
-    "                    #    save_images=False, data_folder=\"sentinel-hub\"\n",
-    "                       ):\n",
+    "def sentinel_single_image(bbox, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, maxcc=0.8, mosaicking_order = 'mostRecent', resolution=10,\n",
+    "                       img_size=None, return_numpy=False, verbose=False, save_image=False, save_dir=\"sentinel-hub\"):\n",
+    "    \n",
+    "    if save_image and save_dir is None:\n",
+    "        raise ValueError(\"save_dir must be specified when save_image is True\")\n",
+    "    \n",
     "    evalscript_true_color = \"\"\"\n",
     "        //VERSION=3\n",
     "\n",
@@ -140,11 +142,14 @@
     "    )\n",
     "\n",
     "    # By construction, only one image at time is returned.\n",
-    "    true_color_imgs = request_true_color.get_data(save_data=False)\n",
-    "    if return_numpy:\n",
-    "        return true_color_imgs[0]\n",
-    "    image = Image.fromarray(true_color_imgs[0].astype('uint8')).convert('RGB') \n",
-    "    return image"
+    "    image_numpy = request_true_color.get_data(save_data=False)[0]\n",
+    "    if save_image or (return_numpy == False):\n",
+    "        image = Image.fromarray(image_numpy.astype('uint8')).convert('RGB')\n",
+    "    \n",
+    "    if save_image:\n",
+    "        image.save(save_dir)\n",
+    "    \n",
+    "    return image_numpy if return_numpy else image"
    ]
   },
   {
@@ -182,12 +187,12 @@
     "\n",
     "\n",
     "def sentinel_get_area(bbox_coords, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, mosaicking_order = 'mostRecent', maxcc=0.8,\n",
-    "                      resolution=5, img_size=(2500,2500), save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\", in_memory=True, \n",
-    "                      temp_dir=r\"sentinel-tmp\", ):\n",
+    "                      resolution=5, img_size=(2500,2500), lon_lat_step=(0.05, 0.05), in_memory=True, temp_dir=r\"sentinel-tmp\", save_concat_image=False,\n",
+    "                      concat_image_dir=r\"sentinel-concat\", concat_image_name=\"default\"):\n",
     "    # Verbose printout\n",
     "    w, h, area = bbox_geometry_calculator(bbox_coords)\n",
     "    lon1_ref, lat1_ref, lon2_ref, lat2_ref = bbox_coords\n",
-    "    bboxes = bbox_divide(bbox_coords)\n",
+    "    bboxes = bbox_divide(bbox_coords, lon_step=lon_lat_step[0], lat_step=lon_lat_step[1])\n",
     "    total_no_bboxes = int (len(bboxes) * len(bboxes[0]))\n",
     "    image_width =  int((lon2_ref - lon1_ref) * 2500 / 0.05)\n",
     "    image_height = int((lat2_ref - lat1_ref) * 2500 / 0.05)\n",
@@ -199,18 +204,18 @@
     "    if in_memory == False:\n",
     "        if temp_dir == None:\n",
     "            raise ValueError(\"temp_dir must be specified if in_memory is False\")\n",
-    "        tmp_subfolder = f\"{timeline[0]}_{timeline[1]}-{bbox}-{mosaicking_order}-{data_collection.catalog_id}-maxcc{maxcc}\"\n",
+    "        tmp_subfolder = f\"{timeline[0]}_{timeline[1]}-{bbox_coords}-res{resolution}-{img_size}-{mosaicking_order}-{data_collection.catalog_id}-maxcc{maxcc}\"\n",
     "        output_dir = os.path.join(temp_dir, tmp_subfolder)\n",
     "        if not os.path.exists(output_dir):\n",
     "            os.makedirs(output_dir)\n",
-    "    \n",
+    "\n",
     "    # Download images from sentinel-hub\n",
     "    images = []\n",
     "    pbar = tqdm(total=total_no_bboxes, desc=\"dl from sentinel-hub\")\n",
     "    for i, bbox_row in enumerate(bboxes):\n",
     "        images_row = []\n",
     "        for j, bbox in enumerate(bbox_row):\n",
-    "            img = get_sentinel_image(bbox, timeline, config, data_collection=data_collection, maxcc=maxcc, mosaicking_order = mosaicking_order,\n",
+    "            img = sentinel_single_image(bbox, timeline, config, data_collection=data_collection, maxcc=maxcc, mosaicking_order = mosaicking_order,\n",
     "                                     resolution=resolution, img_size=img_size, return_numpy=True, verbose=False)\n",
     "            if in_memory:\n",
     "                images_row.append(img)\n",
@@ -229,19 +234,28 @@
     "            images_horizontally.append(im_v)\n",
     "            \n",
     "        concat_image = cv2.vconcat(images_horizontally[::-1])\n",
-    "        concat_image = Image.fromarray(final_image.astype('uint8')).convert('RGB')\n",
+    "        concat_image = Image.fromarray(concat_image.astype('uint8')).convert('RGB')\n",
     "    else:\n",
     "        # images_names_list = os.listdir(output_dir)\n",
     "        n_rows, n_cols = len(bboxes), len(bboxes[0])\n",
     "        images_horizontally = []\n",
     "        for row in range(n_rows):\n",
-    "            row_images_path = [f\"{output_dir}/{row}_{col}.jpg\" for col in range(n_cols)]\n",
-    "            row_images = [Image.open(img_path) for img_path in row_images_path]\n",
+    "            row_images_path = [os.path.join(output_dir, f\"{row}_{col}.jpg\") for col in range(n_cols)]\n",
+    "            row_images = [np.array(Image.open(img_path)) for img_path in row_images_path]\n",
     "            images_horizontally.append(cv2.hconcat(row_images))\n",
     "\n",
     "        concat_image = cv2.vconcat(images_horizontally[::-1])\n",
-    "    \n",
+    "        concat_image = Image.fromarray(concat_image.astype('uint8')).convert('RGB')\n",
     "    print(\"Done!\")\n",
+    "    \n",
+    "    if save_concat_image:\n",
+    "        if concat_image_dir is None:\n",
+    "            raise ValueError(\"concat_image_dir must be specified if save_concat_image is True\")\n",
+    "        elif os.path.exists(concat_image_dir) == False:\n",
+    "            os.mkdir(concat_image_dir)\n",
+    "        concat_image_name = f\"{timeline[0]}_{timeline[1]}-{bbox_coords}-res{resolution}-{img_size}-{mosaicking_order}-{data_collection.catalog_id}-maxcc{maxcc}.jpg\" if concat_image_name == \"default\" else concat_image_name\n",
+    "        concat_image.save(os.path.join(concat_image_dir, concat_image_name))\n",
+    "        print(\"concatenated image saved in {}\".format(concat_image_dir))\n",
     "    return concat_image\n",
     "    "
    ]
@@ -261,8 +275,8 @@
     "mosaicking_order_modes = ['mostRecent', 'leastCC', 'leastRecent']\n",
     "data_collection_modes = [DataCollection.SENTINEL2_L2A, DataCollection.SENTINEL2_L1C]\n",
     "\n",
-    "img_array, final_image = sentinel_get_area(bbox_coords, timeline, config, data_collection=data_collection_modes[1], mosaicking_order = 'mostRecent', maxcc=0.8,\n",
-    "                      resolution=10, save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\", img_size=(768, 768))"
+    "final_image = sentinel_get_area(bbox_coords, timeline, config, data_collection=data_collection_modes[1], mosaicking_order = 'mostRecent', maxcc=0.8,\n",
+    "                      resolution=5, img_size=(2500, 2500), save_concat_image=True, in_memory=False, temp_dir=r\"sentinel-tmp\", )"
    ]
   },
   {
@@ -312,7 +326,7 @@
     "mosaicking_order_modes = ['mostRecent', 'leastCC', 'leastRecent']\n",
     "data_collection_modes = [DataCollection.SENTINEL2_L2A, DataCollection.SENTINEL2_L1C]\n",
     "\n",
-    "img_array, final_image = sentinel_get_area(bbox_coords, timeline, config, data_collection=DataCollection.SENTINEL2_L2A, mosaicking_order = 'mostRecent', maxcc=0.8,\n",
+    "img_array, final_image = sentinel_get_area(bbox_coords, timeline, config, data_collection=data_collection_modes[1], mosaicking_order = 'mostRecent', maxcc=0.8,\n",
     "                      resolution=10, save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\", img_size=(64, 64))"
    ]
   },
